--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -11,32 +11,82 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Task 1: Collatz Conjecture\n",
+    "\n",
+    "> The Collatz conjecture is a famouse unsilved problem in mathematics. The problem is to prove that if you start with any positive integer $x$ and repeatedly apple the function $f(x)$ below, you always get stuck in the repeating sequence $1, 4, 2, 1, 4, 2...$\n",
+    "This task is to verify, using Python, that the conjecture is true for the first 10,000 positive integers.\n",
+    "\n",
+    "![Collatz Conjecture Equation](https://bpb-us-e1.wpmucdn.com/sites.dartmouth.edu/dist/4/417/files/2019/11/gyorda_article_1_picture.png)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#defines the basic function of the collatz conjuncture\n",
+    "def f(x):\n",
+    "    #if the integer can be divided by 2 (is even) then divide by two and return answer\n",
+    "    if x % 2 == 0:\n",
+    "        return x // 2\n",
+    "    #otherwise the integer is determind odd so multiply by 3 and add 1\n",
+    "    else:\n",
+    "        return (3 * x) + 1"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#function to print the results and to loop the function\n",
+    "def collatz(x):\n",
+    "    # Prints a formatted statement with the current integer to verify\n",
+    "    print(f'Testing Collatz with the initial value of {x}')\n",
+    "    #Loops the function as long as the interger results from the above function does not equal 1\n",
+    "    while x != 1:\n",
+    "        x = f(x)\n",
+    "        #formats the results below with spacing and commas\n",
+    "        print(x, end='. ')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing Collatz with the initial value of 10000\n",
+      "5000. 2500. 1250. 625. 1876. 938. 469. 1408. 704. 352. 176. 88. 44. 22. 11. 34. 17. 52. 26. 13. 40. 20. 10. 5. 16. 8. 4. 2. 1. "
+     ]
+    }
+   ],
+   "source": [
+    "# Integer to verify using above function, calling the function with the integer we must verify\n",
+    "collatz(10000)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "\n",
+    "Testing Collatz with the initial value of 10000\n",
+    "5000. 2500. 1250. 625. 1876. 938. 469. 1408. 704. 352. 176. 88. 44. 22. 11. 34. 17. 52. 26. 13. 40. 20. 10. 5. 16. 8. 4. 2. 1.\n",
+    "\n",
+    "```"
+   ]
   },
   {
    "attachments": {},
@@ -56,13 +106,21 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.9.13 (main, Aug 25 2022, 18:29:29) \n[Clang 12.0.0 ]"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "38e2b36688e079b84d87fca17add6d5ca7c350c26e4821df0e23e2b3930c0607"
+    "hash": "38cca0c38332a56087b24af0bc80247f4fced29cb4f7f437d91dc159adec9c4e"
    }
   }
  },
