--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -18,7 +18,8 @@
     "### Task 1: Collatz Conjecture\n",
     "\n",
     "> The Collatz conjecture is a famouse unsilved problem in mathematics. The problem is to prove that if you start with any positive integer $x$ and repeatedly apple the function $f(x)$ below, you always get stuck in the repeating sequence $1, 4, 2, 1, 4, 2...$\n",
-    "This task is to verify, using Python, that the conjecture is true for the first 10,000 positive integers.\n",
+    "\n",
+    "__This task is to verify, using Python, that the conjecture is true for the first 10,000 positive integers.__\n",
     "\n",
     "![Collatz Conjecture Equation](https://bpb-us-e1.wpmucdn.com/sites.dartmouth.edu/dist/4/417/files/2019/11/gyorda_article_1_picture.png)"
    ]
@@ -73,19 +74,6 @@
    "source": [
     "# Integer to verify using above function, calling the function with the integer we must verify\n",
     "collatz(10000)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "```\n",
-    "\n",
-    "Testing Collatz with the initial value of 10000\n",
-    "5000. 2500. 1250. 625. 1876. 938. 469. 1408. 704. 352. 176. 88. 44. 22. 11. 34. 17. 52. 26. 13. 40. 20. 10. 5. 16. 8. 4. 2. 1.\n",
-    "\n",
-    "```"
    ]
   },
   {
