set up for task 2

--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -83,6 +83,19 @@
    "source": [
     "---\n",
     "\n",
+    "## Task 2: Penguins Data Set\n",
+    "\n",
+    "> An overview of the famouse penguins data set, explaining the types of variables it contains and suggestions of variables that should be used to model them in Python and why.\n",
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
     "## End"
    ]
   }
