added print to see result

--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -73,7 +73,7 @@
    ],
    "source": [
     "# Integer to verify using above function, calling the function with the integer we must verify\n",
-    "collatz(10000)"
+    "print(collatz(10000))"
    ]
   },
   {
@@ -116,7 +116,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.13 (main, Aug 25 2022, 18:24:45) \n[Clang 12.0.0 ]"
   },
   "orig_nbformat": 4,
   "vscode": {
