--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,12 +54,12 @@
     "    while x != 1:\n",
     "        x = f(x)\n",
     "        #formats the results below with spacing and commas\n",
-    "        print(x, end='. ')"
+    "        print(x, end=', ')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
      "output_type": "stream",
      "text": [
       "Testing Collatz with the initial value of 10000\n",
-      "5000. 2500. 1250. 625. 1876. 938. 469. 1408. 704. 352. 176. 88. 44. 22. 11. 34. 17. 52. 26. 13. 40. 20. 10. 5. 16. 8. 4. 2. 1. "
+      "5000, 2500, 1250, 625, 1876, 938, 469, 1408, 704, 352, 176, 88, 44, 22, 11, 34, 17, 52, 26, 13, 40, 20, 10, 5, 16, 8, 4, 2, 1, None\n"
      ]
     }
    ],
@@ -87,6 +87,14 @@
     "\n",
     "> An overview of the famouse penguins data set, explaining the types of variables it contains and suggestions of variables that should be used to model them in Python and why.\n",
     "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Variable Types are Numerical and Strings. The data is similar to the Irish data set types except there are no decimals in the numerical measurements. "
    ]
   },
   {
