adding information for task 2 and 3 and mardown table

--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -85,7 +85,7 @@
     "\n",
     "## Task 2: Penguins Data Set\n",
     "\n",
-    "> An overview of the famouse penguins data set, explaining the types of variables it contains and suggestions of variables that should be used to model them in Python and why.\n",
+    "> An overview of the famous penguins data set, explaining the types of variables it contains and suggestions of variables that should be used to model them in Python and why.\n",
     "\n"
    ]
   },
@@ -94,7 +94,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Variable Types are Numerical and Strings. The data is similar to the Irish data set types except there are no decimals in the numerical measurements. "
+    "The dataset known as the \"penguin\" dataset refers to the Palmer Penguins dataset collected between 2007 and 2009 in the Palmer Archipelago in Antartica. It lists the species information on three species of Penguin. These measurements include the bill length and depth, flipper length, body mass and the island, species name and sex catagories. These measurements when investigated can help us to understand the characteristics and behaviours of the three species of Penguin - Chinstrap, Gentoo and Adélie.\n",
+    "\n",
+    "## Task 3: Variables and Random Distributions \n",
+    "\n",
+    "> Suggest which probability distribution from NumPy random distributions list that is most appropriate to model each of the variables in the \"penguins\" dataset.\n",
+    "\n",
+    "| Variable | Random Probability Distribution |\n",
+    "| -------- | ------------------------------- |\n",
+    "| species | ... |\n",
+    "| island | ... |\n",
+    "| sex | ... |\n",
+    "| bill_length_mm | ... |\n",
+    "| bill_depth_mm | ... |\n",
+    "| flipper_length_mm | ...|\n",
+    "| body_mass_g | ... |"
    ]
   },
   {
