additional information added to task 2

--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -96,6 +96,8 @@
    "source": [
     "The dataset known as the \"penguin\" dataset refers to the Palmer Penguins dataset collected between 2007 and 2009 in the Palmer Archipelago in Antartica. It lists the species information on three species of Penguin. These measurements include the bill length and depth, flipper length, body mass and the island, species name and sex catagories. These measurements when investigated can help us to understand the characteristics and behaviours of the three species of Penguin - Chinstrap, Gentoo and Adélie.\n",
     "\n",
+    "The data types are strings and numerical. \n",
+    "\n",
     "## Task 3: Variables and Random Distributions \n",
     "\n",
     "> Suggest which probability distribution from NumPy random distributions list that is most appropriate to model each of the variables in the \"penguins\" dataset.\n",
