table and referencing added

--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -102,15 +102,24 @@
     "\n",
     "> Suggest which probability distribution from NumPy random distributions list that is most appropriate to model each of the variables in the \"penguins\" dataset.\n",
     "\n",
-    "| Variable | Random Probability Distribution |\n",
-    "| -------- | ------------------------------- |\n",
-    "| species | ... |\n",
-    "| island | ... |\n",
-    "| sex | ... |\n",
-    "| bill_length_mm | ... |\n",
-    "| bill_depth_mm | ... |\n",
-    "| flipper_length_mm | ...|\n",
-    "| body_mass_g | ... |"
+    "| Variable | Random Probability Distribution | Reasoning |\n",
+    "| -------- | ------------------------------- | --------- |\n",
+    "| species | multinomial distribution [^1] | ... |\n",
+    "| island | multinomial distribution | ... |\n",
+    "| sex | binomial distribution [^2] | ... |\n",
+    "| bill_length_mm | normal distribution [^3] | ... |\n",
+    "| bill_depth_mm | normal distribution | ... |\n",
+    "| flipper_length_mm | normal distribution | ... |\n",
+    "| body_mass_g | normal distribution | ... |\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "## References:\n",
+    "\n",
+    "[1]: \"numpy.random.multinomial — NumPy v1.26 Manual\" https://numpy.org/doc/stable/reference/random/generated/numpy.random.multinomial.html \n",
+    "[2]: \"numpy.random.binomial — NumPy v1.26 Manual\" https://numpy.org/doc/stable/reference/random/generated/numpy.random.binomial.html\n",
+    "[3]: \"numpy.random.normal — NumPy v1.26 Manual\" https://numpy.org/doc/stable/reference/random/generated/numpy.random.normal.html"
    ]
   },
   {
