edited wording to explain better the reasoning for distribution choices

--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -104,16 +104,22 @@
     "\n",
     "| Variable | Random Probability Distribution | Reasoning |\n",
     "| -------- | ------------------------------- | --------- |\n",
-    "| species | multinomial distribution [^1] | ... |\n",
-    "| island | multinomial distribution | ... |\n",
-    "| sex | binomial distribution [^2] | ... |\n",
-    "| bill_length_mm | normal distribution [^3] | ... |\n",
-    "| bill_depth_mm | normal distribution | ... |\n",
-    "| flipper_length_mm | normal distribution | ... |\n",
-    "| body_mass_g | normal distribution | ... |\n",
+    "| species | multinomial distribution [^1] | as there are more than 2 possible species, the multinomical distribution used on the catagorical variable alows us to investigate the distribution and frequency of the species and their island habitats |\n",
+    "| island | multinomial distribution | as there are more than 2 islands named, the multinomical distribution used on the catagorical variable alows us to investigate the distribution and frequency of the species and their island habitats |\n",
+    "| sex | binomial distribution [^2] | as the outcome is catagorical but has only two outcomes: male or female |\n",
+    "| bill_length_mm | normal distribution [^3] | as it is a continuous numerical measurement |\n",
+    "| bill_depth_mm | normal distribution | as it is a continuous numerical measurement |\n",
+    "| flipper_length_mm | normal distribution | as it is a continuous numerical measurement |\n",
+    "| body_mass_g | normal distribution | as it is a continuous numerical measurement |\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
-    "\n",
-    "\n",
+    "---\n",
     "\n",
     "## References:\n",
     "\n",
@@ -149,7 +155,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13 (main, Aug 25 2022, 18:24:45) \n[Clang 12.0.0 ]"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
