attempting to set references adding images of peguins

--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -97,7 +97,10 @@
     "The dataset known as the \"penguin\" dataset refers to the Palmer Penguins dataset collected between 2007 and 2009 in the Palmer Archipelago in Antartica. It lists the species information on three species of Penguin. These measurements include the bill length and depth, flipper length, body mass and the island, species name and sex catagories. These measurements when investigated can help us to understand the characteristics and behaviours of the three species of Penguin - Chinstrap, Gentoo and Adélie.\n",
     "\n",
     "The data types are strings and numerical. \n",
-    "\n"
+    "\n",
+    "| **Chinstrap** | **Gentoo** | **Adélie** |\n",
+    "| ------------- | ---------- | ---------- |\n",
+    "| [![Chinstrap Penguin](/chinstrappenguin.jpeg)](https://www.google.com/url?sa=i&url=https%3A%2F%2Fstock.adobe.com%2Fimages%2Fhand-drawn-watercolor-chinstrap-penguin-illustration-isolated-on-white-background-antarctic-animal-bird%2F476379841&psig=AOvVaw3WMeBwFO3HIdGxwHT35aMv&ust=1698782504786000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCPiC3I_InoIDFQAAAAAdAAAAABAE) | [![Gentoo Penguin](/gentoopenguin.png)](https://www.google.com/url?sa=i&url=https%3A%2F%2Fclipart-library.com%2Fclipart%2F1750145.htm&psig=AOvVaw1buJ66yRwzIijwqJD-hGgQ&ust=1698782634070000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCOj4sc3InoIDFQAAAAAdAAAAABAE) | [![Adélie Penguin](/adeliepenguin.png)](https://www.google.com/imgres?imgurl=https%3A%2F%2Fw7.pngwing.com%2Fpngs%2F978%2F397%2Fpng-transparent-adelie-penguin-bird-antarctica-emperor-penguin-penguin-animals-animal-bird.png&tbnid=2OSS9ZGGDifUsM&vet=12ahUKEwjo24njyJ6CAxUMUkEAHRlLCUMQMygAegQIARBL..i&imgrefurl=https%3A%2F%2Fwww.pngwing.com%2Fen%2Ffree-png-hamqa&docid=_NVf6lsMCE7xfM&w=920&h=735&q=adelie%20penguin%20transparent%20background&client=safari&ved=2ahUKEwjo24njyJ6CAxUMUkEAHRlLCUMQMygAegQIARBL) |"
    ]
   },
   {
@@ -113,14 +116,19 @@
     "\n",
     "| Variable | Random Probability Distribution | Reasoning |\n",
     "| -------- | ------------------------------- | --------- |\n",
-    "| species | multinomial distribution [^1] | as there are more than 2 possible species, the multinomical distribution used on the catagorical variable alows us to investigate the distribution and frequency of the species and their island habitats |\n",
+    "| species | multinomial distribution | as there are more than 2 possible species, the multinomical distribution used on the catagorical variable alows us to investigate the distribution and frequency of the species and their island habitats |\n",
     "| island | multinomial distribution | as there are more than 2 islands named, the multinomical distribution used on the catagorical variable alows us to investigate the distribution and frequency of the species and their island habitats |\n",
-    "| sex | binomial distribution [^2] | as the outcome is catagorical but has only two outcomes: male or female |\n",
-    "| bill_length_mm | normal distribution [^3] | as it is a continuous numerical measurement |\n",
+    "| sex | binomial distribution | as the outcome is catagorical but has only two outcomes: male or female |\n",
+    "| bill_length_mm | normal distribution | as it is a continuous numerical measurement |\n",
     "| bill_depth_mm | normal distribution | as it is a continuous numerical measurement |\n",
     "| flipper_length_mm | normal distribution | as it is a continuous numerical measurement |\n",
     "| body_mass_g | normal distribution | as it is a continuous numerical measurement |\n",
     "\n",
+    "[^1]\n",
+    "\n",
+    "[^2]\n",
+    "\n",
+    "[^3]\n",
     "\n",
     "---\n"
    ]
@@ -135,9 +143,9 @@
     "\n",
     "## References:\n",
     "\n",
-    "[1]: \"numpy.random.multinomial — NumPy v1.26 Manual\" https://numpy.org/doc/stable/reference/random/generated/numpy.random.multinomial.html \n",
-    "[2]: \"numpy.random.binomial — NumPy v1.26 Manual\" https://numpy.org/doc/stable/reference/random/generated/numpy.random.binomial.html\n",
-    "[3]: \"numpy.random.normal — NumPy v1.26 Manual\" https://numpy.org/doc/stable/reference/random/generated/numpy.random.normal.html"
+    "[^1]: https://numpy.org/doc/stable/reference/random/generated/numpy.random.multinomial.html\n",
+    "[^2]: https://numpy.org/doc/stable/reference/random/generated/numpy.random.binomial.html\n",
+    "[^3]: https://numpy.org/doc/stable/reference/random/generated/numpy.random.normal.html"
    ]
   },
   {
@@ -167,7 +175,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.13 (main, Aug 25 2022, 18:24:45) \n[Clang 12.0.0 ]"
   },
   "orig_nbformat": 4,
   "vscode": {
