table and image fix attmept

--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -101,7 +101,7 @@
     "| **Chinstrap** | **Gentoo** | **Adélie** |\n",
     "| ------------- | ---------- | ---------- |\n",
     "| [![Chinstrap Penguin](/chinstrappenguin.jpeg)](https://www.google.com/url?sa=i&url=https%3A%2F%2Fstock.adobe.com%2Fimages%2Fhand-drawn-watercolor-chinstrap-penguin-illustration-isolated-on-white-background-antarctic-animal-bird%2F476379841&psig=AOvVaw3WMeBwFO3HIdGxwHT35aMv&ust=1698782504786000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCPiC3I_InoIDFQAAAAAdAAAAABAE) | [![Gentoo Penguin](/gentoopenguin.png)](https://www.google.com/url?sa=i&url=https%3A%2F%2Fclipart-library.com%2Fclipart%2F1750145.htm&psig=AOvVaw1buJ66yRwzIijwqJD-hGgQ&ust=1698782634070000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCOj4sc3InoIDFQAAAAAdAAAAABAE) | [![Adélie Penguin](/adeliepenguin.png)](https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.nationalgeographic.com%2Fanimals%2Fbirds%2Ffacts%2Fadelie-penguin&psig=AOvVaw2XblHleipnLPH0lVq2vuz_&ust=1698783239208000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCJjK8O3KnoIDFQAAAAAdAAAAABAJ) |\n",
-    "| ------------ | ----------- | NOOT NOOT |"
+    "| | | NOOT NOOT |"
    ]
   },
   {
