--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
    "source": [
     "---\n",
     "\n",
-    "## Task 2: Penguins Data Set\n",
+    "### Task 2: Penguins Data Set\n",
     "\n",
     "> An overview of the famous penguins data set, explaining the types of variables it contains and suggestions of variables that should be used to model them in Python and why.\n",
     "\n"
@@ -111,7 +111,7 @@
    "source": [
     "---\n",
     "\n",
-    "## Task 3: Variables and Random Distributions \n",
+    "### Task 3: Variables and Random Distributions \n",
     "\n",
     "> Suggest which probability distribution from NumPy random distributions list that is most appropriate to model each of the variables in the \"penguins\" dataset.\n",
     "\n",
@@ -176,7 +176,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13 (main, Aug 25 2022, 18:24:45) \n[Clang 12.0.0 ]"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
