rearranging folders and files for projects/tasks

--- a/Tasks/tasks.ipynb
+++ b/Tasks/tasks.ipynb
@@ -125,11 +125,7 @@
     "| flipper_length_mm | normal distribution | as it is a continuous numerical measurement |\n",
     "| body_mass_g | normal distribution | as it is a continuous numerical measurement |\n",
     "\n",
-    "[^1]\n",
-    "\n",
-    "[^2]\n",
-    "\n",
-    "[^3]\n",
+    "[^1] [^2] [^3]\n",
     "\n",
     "---\n"
    ]
@@ -176,7 +172,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.13 (main, Aug 25 2022, 18:24:45) \n[Clang 12.0.0 ]"
   },
   "orig_nbformat": 4,
   "vscode": {
