referecing markdown no longer working as previously, removed for now

--- a/Project/project.ipynb
+++ b/Project/project.ipynb
@@ -13,17 +13,20 @@
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "# Fisher's Iris Data Set\n",
-    "[1^]"
-   ]
+   "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## END"
+   ]
   }
  ],
  "metadata": {
