--- a/Tasks/tasks.ipynb
+++ b/Tasks/tasks.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,18 +59,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Testing Collatz with the initial value of 10000\n",
-      "5000, 2500, 1250, 625, 1876, 938, 469, 1408, 704, 352, 176, 88, 44, 22, 11, 34, 17, 52, 26, 13, 40, 20, 10, 5, 16, 8, 4, 2, 1, None\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Integer to verify using above function, calling the function with the integer we must verify\n",
     "print(collatz(10000))"
@@ -129,29 +120,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  species     island  bill_length_mm  bill_depth_mm  flipper_length_mm  \\\n",
-      "0  Adelie  Torgersen            39.1           18.7              181.0   \n",
-      "1  Adelie  Torgersen            39.5           17.4              186.0   \n",
-      "2  Adelie  Torgersen            40.3           18.0              195.0   \n",
-      "3  Adelie  Torgersen             NaN            NaN                NaN   \n",
-      "4  Adelie  Torgersen            36.7           19.3              193.0   \n",
-      "\n",
-      "   body_mass_g     sex  \n",
-      "0       3750.0    MALE  \n",
-      "1       3800.0  FEMALE  \n",
-      "2       3250.0  FEMALE  \n",
-      "3          NaN     NaN  \n",
-      "4       3450.0  FEMALE  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np  \n",
     "import pandas as pd\n",
@@ -165,17 +136,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(344, 7)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "#checks how many rows and columns\n",
@@ -185,21 +148,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "species\n",
-      "Adelie       152\n",
-      "Gentoo       124\n",
-      "Chinstrap     68\n",
-      "dtype: int64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "#checks the count of each species and island (the both are multinominal distribution type)\n",
@@ -208,21 +159,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "island\n",
-      "Biscoe       168\n",
-      "Dream        124\n",
-      "Torgersen     52\n",
-      "dtype: int64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "print(df.value_counts(\"island\"))\n",
@@ -231,24 +170,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "species               0\n",
-      "island                0\n",
-      "bill_length_mm        2\n",
-      "bill_depth_mm         2\n",
-      "flipper_length_mm     2\n",
-      "body_mass_g           2\n",
-      "sex                  11\n",
-      "dtype: int64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "#checks for null values\n",
@@ -257,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +189,7 @@
     "#summarise the information in order to read/write new file\n",
     "\n",
     "summarize = df.describe()\n",
-    "#Outputs a summary of each variable to a single text file to get different values:\n",
+    "#Outputs a summary of each variable to a single text file to get different values for later referenace and use in tasks and projects:\n",
     "with open (\"summary.txt\", \"w+\") as file:\n",
     "    file.write(summarize.to_string())\n",
     "file.close()"
@@ -301,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
