--- a/Tasks/tasks.ipynb
+++ b/Tasks/tasks.ipynb
@@ -91,8 +91,10 @@
     "\n",
     "| **Chinstrap** | **Gentoo** | **Adélie** |\n",
     "| ------------- | ---------- | ---------- |\n",
-    "| [![Chinstrap Penguin](/chinstrappenguin.jpeg)](https://www.google.com/url?sa=i&url=https%3A%2F%2Fstock.adobe.com%2Fimages%2Fhand-drawn-watercolor-chinstrap-penguin-illustration-isolated-on-white-background-antarctic-animal-bird%2F476379841&psig=AOvVaw3WMeBwFO3HIdGxwHT35aMv&ust=1698782504786000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCPiC3I_InoIDFQAAAAAdAAAAABAE) | [![Gentoo Penguin](/gentoopenguin.png)](https://www.google.com/url?sa=i&url=https%3A%2F%2Fclipart-library.com%2Fclipart%2F1750145.htm&psig=AOvVaw1buJ66yRwzIijwqJD-hGgQ&ust=1698782634070000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCOj4sc3InoIDFQAAAAAdAAAAABAE) | [![Adélie Penguin](/adeliepenguin.jpeg)](https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.nationalgeographic.com%2Fanimals%2Fbirds%2Ffacts%2Fadelie-penguin&psig=AOvVaw2XblHleipnLPH0lVq2vuz_&ust=1698783239208000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCJjK8O3KnoIDFQAAAAAdAAAAABAJ) |\n",
-    "| | | NOOT NOOT |"
+    "| [![Chinstrap Penguin](chinstrappenguin.jpeg)] | [![Gentoo Penguin](gentoopenguin.png)] | [![Adélie Penguin](adeliepenguin.jpeg)] |\n",
+    "| | | NOOT NOOT |\n",
+    "\n",
+    "!!!refimages"
    ]
   },
   {
@@ -196,9 +198,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "![summary.txt text file results with various values include mean, count and standard deviation](summarytxtfile.png)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -252,7 +257,8 @@
     "\n",
     "[^1]: https://numpy.org/doc/stable/reference/random/generated/numpy.random.multinomial.html\n",
     "[^2]: https://numpy.org/doc/stable/reference/random/generated/numpy.random.binomial.html\n",
-    "[^3]: https://numpy.org/doc/stable/reference/random/generated/numpy.random.normal.html"
+    "[^3]: https://numpy.org/doc/stable/reference/random/generated/numpy.random.normal.html\n",
+    "https://www.markdownguide.org/cheat-sheet/ "
    ]
   },
   {
