images paths fixed

--- a/Tasks/tasks.ipynb
+++ b/Tasks/tasks.ipynb
@@ -91,7 +91,7 @@
     "\n",
     "| **Chinstrap** | **Gentoo** | **Adélie** |\n",
     "| ------------- | ---------- | ---------- |\n",
-    "| [![Chinstrap Penguin](chinstrappenguin.jpeg)] | [![Gentoo Penguin](gentoopenguin.png)] | [![Adélie Penguin](adeliepenguin.jpeg)] |\n",
+    "| [![Chinstrap Penguin](/Tasks/Images/chinstrappenguin.jpef)] | [![Gentoo Penguin](/Tasks/Images/gentoopenguin.png)] | [![Adélie Penguin](/Tasks/Images/adeliepenguin.jpeg)] |\n",
     "| | | NOOT NOOT |\n",
     "\n",
     "!!!refimages"
@@ -202,7 +202,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![summary.txt text file results with various values include mean, count and standard deviation](summarytxtfile.png)"
+    "![summary.txt text file results with various values include mean, count and standard deviation](/Tasks/Images/summarytxtfile.png)"
    ]
   },
   {
