--- a/Tasks/tasks.ipynb
+++ b/Tasks/tasks.ipynb
@@ -91,7 +91,7 @@
     "\n",
     "| **Chinstrap** | **Gentoo** | **Adélie** |\n",
     "| ------------- | ---------- | ---------- |\n",
-    "| ![Chinstrap Penguin](/Tasks/Images/chinstrappenguin.jpeg) | ![Gentoo Penguin](/Tasks/Images/gentoopenguin.png) | ![Adélie Penguin](/Tasks/Images/adeliepenguin.jpeg) |\n",
+    "| [![Chinstrap Penguin](chinstrappenguin.jpeg)] | [![Gentoo Penguin](gentoopenguin.png)] | [![Adélie Penguin](adeliepenguin.jpeg)] |\n",
     "| | | NOOT NOOT |\n",
     "\n",
     "!!!refimages"
