image links changed

--- a/Tasks/tasks.ipynb
+++ b/Tasks/tasks.ipynb
@@ -91,7 +91,7 @@
     "\n",
     "| **Chinstrap** | **Gentoo** | **Adélie** |\n",
     "| ------------- | ---------- | ---------- |\n",
-    "| [![Chinstrap Penguin](chinstrappenguin.jpeg)] | [![Gentoo Penguin](gentoopenguin.png)] | [![Adélie Penguin](adeliepenguin.jpeg)] |\n",
+    "| [![Chinstrap Penguin](https://github.com/rebhanqui/data_funds/blob/main/Tasks/Images/chinstrappenguin.jpeg) | [![Gentoo Penguin](https://github.com/rebhanqui/data_funds/blob/main/Tasks/Images/gentoopenguin.png)] | [![Adélie Penguin](https://github.com/rebhanqui/data_funds/blob/main/Tasks/Images/adeliepenguin.jpeg) |\n",
     "| | | NOOT NOOT |\n",
     "\n",
     "!!!refimages"
