solution attempy and ref to solution for image showing on github issue

--- a/Tasks/tasks.ipynb
+++ b/Tasks/tasks.ipynb
@@ -91,7 +91,7 @@
     "\n",
     "| **Chinstrap** | **Gentoo** | **Adélie** |\n",
     "| ------------- | ---------- | ---------- |\n",
-    "| [![Chinstrap Penguin](https://github.com/rebhanqui/data_funds/blob/main/Tasks/Images/chinstrappenguin.jpeg)] | [![Gentoo Penguin](https://github.com/rebhanqui/data_funds/blob/main/Tasks/Images/gentoopenguin.png)] | [![Adélie Penguin](https://github.com/rebhanqui/data_funds/blob/main/Tasks/Images/adeliepenguin.jpeg)] |\n",
+    "| [![Chinstrap Penguin](https://github.com/rebhanqui/data_funds/blob/main/Tasks/Images/chinstrappenguin.jpeg?raw=true)] | [![Gentoo Penguin](https://github.com/rebhanqui/data_funds/blob/main/Tasks/Images/gentoopenguin.png?raw=true)] | [![Adélie Penguin](https://github.com/rebhanqui/data_funds/blob/main/Tasks/Images/adeliepenguin.jpeg?raw=true)] |\n",
     "| | | NOOT NOOT |\n",
     "\n",
     "!!!refimages"
@@ -258,7 +258,8 @@
     "[^1]: https://numpy.org/doc/stable/reference/random/generated/numpy.random.multinomial.html\n",
     "[^2]: https://numpy.org/doc/stable/reference/random/generated/numpy.random.binomial.html\n",
     "[^3]: https://numpy.org/doc/stable/reference/random/generated/numpy.random.normal.html\n",
-    "https://www.markdownguide.org/cheat-sheet/ "
+    "https://www.markdownguide.org/cheat-sheet/ \n",
+    "Images Issue: https://stackoverflow.com/questions/13051428/how-to-display-images-in-markdown-files-on-github"
    ]
   },
   {
