--- a/Tasks/tasks.ipynb
+++ b/Tasks/tasks.ipynb
@@ -202,7 +202,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![summary.txt text file results with various values include mean, count and standard deviation](/Tasks/Images/summarytxtfile.png?raw=true)"
+    "![summary.txt text file results with various values include mean, count and standard deviation](https://github.com/rebhanqui/data_funds/blob/main/Tasks/Images/summarytxtfile.pnggi?raw=true)"
    ]
   },
   {
