small edits to comments

--- a/Tasks/tasks.ipynb
+++ b/Tasks/tasks.ipynb
@@ -191,7 +191,8 @@
     "#summarise the information in order to read/write new file\n",
     "\n",
     "summarize = df.describe()\n",
-    "#Outputs a summary of each variable to a single text file to get different values for later referenace and use in tasks and projects:\n",
+    "#Outputs a summary of each variable to a single text file to get different values for later referenace /\n",
+    "# and use in tasks and projects:\n",
     "with open (\"summary.txt\", \"w+\") as file:\n",
     "    file.write(summarize.to_string())\n",
     "file.close()"
