removed unnessecary code, saved in another file incase helpful later in project

--- a/Tasks/tasks.ipynb
+++ b/Tasks/tasks.ipynb
@@ -110,103 +110,6 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
-    "#### Data Information\n",
-    "\n",
-    "> To better help understand the information we are dealing with and dislay information only the computer can confirm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np  \n",
-    "import pandas as pd\n",
-    "\n",
-    "#reading in the CSV file - acquired from:\n",
-    "# Read in CSV file\n",
-    "#prints the top 5 rows of the data\n",
-    "df = pd.read_csv(\"penguins.csv\")\n",
-    "print(df.head())\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "#checks how many rows and columns\n",
-    "print(df.shape)\n",
-    "#Result is 344 rows and 7 columns (does not include the row numbers column)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "#checks the count of each species and island (the both are multinominal distribution type)\n",
-    "print(df.value_counts(\"species\"))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "print(df.value_counts(\"island\"))\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "#checks for null values\n",
-    "print(df.isnull().sum())\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "#summarise the information in order to read/write new file\n",
-    "\n",
-    "summarize = df.describe()\n",
-    "#Outputs a summary of each variable to a single text file to get different values for later referenace /\n",
-    "# and use in tasks and projects:\n",
-    "with open (\"summary.txt\", \"w+\") as file:\n",
-    "    file.write(summarize.to_string())\n",
-    "file.close()"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![summary.txt text file results with various values include mean, count and standard deviation](https://github.com/rebhanqui/data_funds/blob/main/Tasks/Images/summarytxtfile.png?raw=true)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -290,7 +193,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.13 (main, Aug 25 2022, 18:24:45) \n[Clang 12.0.0 ]"
   },
   "orig_nbformat": 4,
   "vscode": {
