removing imoports that are wrong/not needed, added ref link

--- a/Tasks/tasks.ipynb
+++ b/Tasks/tasks.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,9 +59,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing Collatz with the initial value of 10000\n",
+      "5000, 2500, 1250, 625, 1876, 938, 469, 1408, 704, 352, 176, 88, 44, 22, 11, 34, 17, 52, 26, 13, 40, 20, 10, 5, 16, 8, 4, 2, 1, None\n"
+     ]
+    }
+   ],
    "source": [
     "# Integer to verify using above function, calling the function with the integer we must verify\n",
     "print(collatz(10000))"
@@ -106,18 +115,17 @@
     "\n",
     "### Task 3: Variables and Random Distributions \n",
     "\n",
-    "> Suggest which probability distribution from NumPy random distributions list that is most appropriate to model each of the variables in the \"penguins\" dataset.\n"
+    "> Suggest which probability distribution from NumPy random distributions list that is most appropriate to model each of the variables in the \"penguins\" dataset."
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "\n",
     "#### Variables and Their Random Probability Distributions\n",
     "\n",
-    "| Variable | Random Probability Distribution | Reasoning |\n",
+    "| Variable | Random Probability Distribution Type | Reasoning |\n",
     "| -------- | ------------------------------- | --------- |\n",
     "| species | multinomial distribution | as there are more than 2 possible species, the multinomical distribution used on the catagorical variable alows us to investigate the distribution and frequency of the species and their island habitats |\n",
     "| island | multinomial distribution | as there are more than 2 islands named, the multinomical distribution used on the catagorical variable alows us to investigate the distribution and frequency of the species and their island habitats |\n",
@@ -133,20 +141,46 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#list comprehensions use\n",
-    "# importing libraries for use in tasks/projects\n",
+    "### Task 4: Plot the Entropy\n",
+    "\n",
+    "> Suppose you are flipping two coins, each with a probability of **p** of giving heads. Plot the entropy of the total number of heads verses **p**.\n",
+    "\n",
+    "The probability distribution of coin flipping would be binomial, as there is only one of two end results."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'count' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/rebeccaquinn/Desktop/Data Analysis 22-24/S2-23/data_funds/Tasks/tasks.ipynb Cell 11\u001b[0m in \u001b[0;36m<cell line: 15>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/rebeccaquinn/Desktop/Data%20Analysis%2022-24/S2-23/data_funds/Tasks/tasks.ipynb#X30sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39m#ref\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/rebeccaquinn/Desktop/Data%20Analysis%2022-24/S2-23/data_funds/Tasks/tasks.ipynb#X30sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39m#random for numerical arrays to use for exploring data set\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/rebeccaquinn/Desktop/Data%20Analysis%2022-24/S2-23/data_funds/Tasks/tasks.ipynb#X30sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m rand_coins \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mrandom\u001b[39m.\u001b[39mbinomial(\u001b[39m1\u001b[39m, \u001b[39m0.5\u001b[39m, \u001b[39m100\u001b[39m)\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/rebeccaquinn/Desktop/Data%20Analysis%2022-24/S2-23/data_funds/Tasks/tasks.ipynb#X30sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m \u001b[39mprint\u001b[39m(rand_coins(count[\u001b[39m0\u001b[39m]))\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'count' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# importing libraries for use in tasks/projects - numpy for numerical arrays and random numbers\n",
     "import numpy as np\n",
-    "#ref\n",
+    "#REF: https://atlantictu-my.sharepoint.com/:v:/r/personal/ian_mcloughlin_atu_ie/Documents/student_shares/fundamentals_of_data_analysis/4_information/fund_t04v02_np_binomial_play.mkv?csf=1&web=1&e=Qd5qil&nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJTdHJlYW1XZWJBcHAiLCJyZWZlcnJhbFZpZXciOiJTaGFyZURpYWxvZyIsInJlZmVycmFsQXBwUGxhdGZvcm0iOiJXZWIiLCJyZWZlcnJhbE1vZGUiOiJ2aWV3In19\n",
+    "\n",
     "import matplotlib as plt\n",
+    "#to plot chart to show the entropy of total number of heads verses p\n",
     "#ref\n",
-    "import random\n",
-    "#ref\n",
-    "#random for numerical arrays to use for exploring data set"
+    "\n",
+    "rand_coins = np.random.binomial(1, 0.5)\n",
+    "\n",
+    "print(rand_coins)"
    ]
   },
   {
@@ -193,7 +227,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13 (main, Aug 25 2022, 18:24:45) \n[Clang 12.0.0 ]"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
