--- a/Tasks/tasks.ipynb
+++ b/Tasks/tasks.ipynb
@@ -197,6 +197,9 @@
     "#ref\n",
     "\n",
     "#create function to find number of heads in 2 coins tossed\n",
+    "#REF: https://atlantictu-my.sharepoint.com/:v:/r/personal/ian_mcloughlin_atu_ie/Documents/student_shares/fundamentals_of_data_analysis/4_information/fund_t04v03_bernoulli.mkv?csf=1&web=1&e=GW7Xza&nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJTdHJlYW1XZWJBcHAiLCJyZWZlcnJhbFZpZXciOiJTaGFyZURpYWxvZyIsInJlZmVycmFsQXBwUGxhdGZvcm0iOiJXZWIiLCJyZWZlcnJhbE1vZGUiOiJ2aWV3In19\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
