working tree update

--- a/Tasks/tasks.ipynb
+++ b/Tasks/tasks.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "### Task 1: Collatz Conjecture\n",
     "\n",
-    "> The Collatz conjecture is a famouse unsilved problem in mathematics. The problem is to prove that if you start with any positive integer $x$ and repeatedly apple the function $f(x)$ below, you always get stuck in the repeating sequence $1, 4, 2, 1, 4, 2...$\n",
+    "> The Collatz conjecture is a famouse unsilved problem in mathematics. The problem is to prove that if you start with any positive integer $x$ and repeatedly apply the function $f(x)$ below.\n",
     "\n",
     "__This task is to verify, using Python, that the conjecture is true for the first 10,000 positive integers.__\n",
     "\n",
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -149,12 +149,12 @@
     "\n",
     "> Suppose you are flipping two coins, each with a probability of **p** of giving heads. Plot the entropy of the total number of heads verses **p**.\n",
     "\n",
-    "The probability distribution of coin flipping would be binomial, as there is only one of two end results."
+    "The probability distribution of coin flipping would be binomial, as there are only one of two end results."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,8 +169,11 @@
     "#create function to find number of heads in 2 coins tossed\n",
     "#REF: https://atlantictu-my.sharepoint.com/:v:/r/personal/ian_mcloughlin_atu_ie/Documents/student_shares/fundamentals_of_data_analysis/4_information/fund_t04v03_bernoulli.mkv?csf=1&web=1&e=GW7Xza&nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJTdHJlYW1XZWJBcHAiLCJyZWZlcnJhbFZpZXciOiJTaGFyZURpYWxvZyIsInJlZmVycmFsQXBwUGxhdGZvcm0iOiJXZWIiLCJyZWZlcnJhbE1vZGUiOiJ2aWV3In19\n",
     "\n",
+    "from scipy.stats import entropy\n",
     "\n",
-    "\n"
+    "def entropy():\n",
+    "    \n",
+    "    "
    ]
   },
   {
