--- a/Project/project.ipynb
+++ b/Project/project.ipynb
@@ -6,18 +6,86 @@
    "metadata": {},
    "source": [
     "# Fundamentals of Data Analysis Project\n",
-    "__Rebecca Hannah Quinn__"
+    "\n",
+    "<details>\n",
+    "\n",
+    "<summary> Student Details </summary>\n",
+    "\n",
+    "| Student| Details |\n",
+    "| -------- | -------- |\n",
+    "| Course: | KDATG_L08_Y1 |\n",
+    "| Author: | Rebecca Hannah Quinn |\n",
+    "| Student Number: | G00425671 |\n",
+    "\n",
+    "</details>\n",
+    "\n",
+    "---"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Table of Contents:\n",
+    "\n",
+    "[Fisher's Iris Data Set](#01)\n",
+    "\n",
+    "---"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "<a id=\"01i\">\n",
+    "\n",
+    "## Fisher's Iris Data Set\n",
+    "\n",
+    "</a>\n",
+    "\n",
+    "This data set is one of the world's first used as literature on classification methods and used widely in data analysis, statistics and machine learning to this day. The set contains 3 classed with 50 instances each. Each class is an Iris flower species. Through this investigation we should see that one class is comparatively different from the others while the remaining two are quite similar to each other and more difficult to tell apart. <sup>[^1]</sup>\n",
+    "\n",
+    "---\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Import Iris Data Set "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pandas'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m/Users/rebeccaquinn/Desktop/Data Analysis 22-24/S2-23/data_funds/Project/project.ipynb Cell 5\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/rebeccaquinn/Desktop/Data%20Analysis%2022-24/S2-23/data_funds/Project/project.ipynb#W4sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpandas\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpd\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/rebeccaquinn/Desktop/Data%20Analysis%2022-24/S2-23/data_funds/Project/project.ipynb#W4sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m iris \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mread_csv(\u001b[39m\"\u001b[39m\u001b[39miris.csv\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/rebeccaquinn/Desktop/Data%20Analysis%2022-24/S2-23/data_funds/Project/project.ipynb#W4sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m iris\u001b[39m.\u001b[39mhead()\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pandas'"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "iris = pd.read_csv(\"iris.csv\")\n",
+    "\n",
+    "iris.head()\n",
+    "print(iris)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
@@ -36,8 +104,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.9.13 (main, Aug 25 2022, 18:29:29) \n[Clang 12.0.0 ]"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.0"
   },
   "orig_nbformat": 4,
   "vscode": {
