--- a/Project/project.ipynb
+++ b/Project/project.ipynb
@@ -61,21 +61,30 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'pandas'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m/Users/rebeccaquinn/Desktop/Data Analysis 22-24/S2-23/data_funds/Project/project.ipynb Cell 5\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/rebeccaquinn/Desktop/Data%20Analysis%2022-24/S2-23/data_funds/Project/project.ipynb#W4sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpandas\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpd\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/rebeccaquinn/Desktop/Data%20Analysis%2022-24/S2-23/data_funds/Project/project.ipynb#W4sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m iris \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mread_csv(\u001b[39m\"\u001b[39m\u001b[39miris.csv\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/rebeccaquinn/Desktop/Data%20Analysis%2022-24/S2-23/data_funds/Project/project.ipynb#W4sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m iris\u001b[39m.\u001b[39mhead()\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pandas'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     sepal_length  sepal_width  petal_length  petal_width    species\n",
+      "0             5.1          3.5           1.4          0.2     setosa\n",
+      "1             4.9          3.0           1.4          0.2     setosa\n",
+      "2             4.7          3.2           1.3          0.2     setosa\n",
+      "3             4.6          3.1           1.5          0.2     setosa\n",
+      "4             5.0          3.6           1.4          0.2     setosa\n",
+      "..            ...          ...           ...          ...        ...\n",
+      "145           6.7          3.0           5.2          2.3  virginica\n",
+      "146           6.3          2.5           5.0          1.9  virginica\n",
+      "147           6.5          3.0           5.2          2.0  virginica\n",
+      "148           6.2          3.4           5.4          2.3  virginica\n",
+      "149           5.9          3.0           5.1          1.8  virginica\n",
+      "\n",
+      "[150 rows x 5 columns]\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "iris = pd.read_csv(\"iris.csv\")\n",
+    "iris = pd.read_csv(\"./Relevant Files/Iris Data set/iris.csv\")\n",
     "\n",
     "iris.head()\n",
     "print(iris)"
@@ -113,7 +122,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
