small edit forgot for push

--- a/Project/project.ipynb
+++ b/Project/project.ipynb
@@ -60,7 +60,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Import Iris Data Set and Initial Data Exploration\n",
+    "### Importing the Iris Data Set and Initial Data Exploration\n",
     "\n",
     "We first must import the data set in order to explore the information inside. We do this as below:"
    ]
@@ -542,6 +542,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<br>\n",
+    "\n",
+    "### Initial Data Exploration\n",
+    "\n",
     "The `head()` method helps us take a quick look at the top and bottom rows of the dataframe. If you want to see a specific number of rows you just specify the number between the `()` as shown above, we see the first 20 rows of the Iris data set. To make sure there are also no missing values in the table we can use the `isnull()` method to so. If there are any it will return a true or false boolean as above. \n",
     "\n",
     "The `describe()` function shows the **count** or the number of non-null values - this is the 150 rows containing a value for each variable of flower species. The **max** and **min** shows the largest and smallest values in each variable. The **mean** shows the average value (or sizes listed for each variable of the flower variants). tHE **std** shows the spread of the data in relation to the **mean**: the standard deviation. This is used to determine the variability of the data points which we will see later in the plots. The `describe()` function also shows the number of data points that fall under the various percentiles. Using this function is the quickest way to get the basic statistics on any dataset but each can be used as an individual method if only specific statistic measurements are required. \n",
